css/src/components/chipInput.module.css
.ChipInput {
  display: flex;
  box-sizing: border-box;
  border-radius: var(--border-radius-10);
  box-shadow: inset 0 0 0 var(--spacing-2-5) var(--secondary);
  background: var(--white);
  cursor: text;
  flex: 100%;
}

.ChipInput--regular {
  padding-left: 10px;
  padding-right: 10px;
}

.ChipInput--small {
  align-items: center;
  min-height: var(--spacing-60);
  padding-left: var(--spacing-20);
  padding-right: var(--spacing-20);
}

.ChipInput:hover {
  background: var(--secondary-lighter);
  box-shadow: inset 0 0 0 var(--spacing-2-5) var(--secondary-dark);
}

.ChipInput:focus-within {
  background: var(--white);
}

.ChipInput--disabled {
  background: var(--secondary-lightest);
  box-shadow: inset 0 0 0 var(--spacing-2-5) var(--secondary-light);
  pointer-events: none;
}

.ChipInput--withChips {
  padding-right: 0;
}

.ChipInput--error {
  box-shadow: inset 0 0 0 var(--spacing-2-5) var(--alert);
}

.ChipInput-wrapper {
  display: flex;
  flex: 100%;
  align-items: center;
  flex-wrap: wrap;
}

.ChipInput--small .ChipInput-wrapper {
  min-height: var(--spacing-60);
}

.ChipInput-border--focusRing {
  border-radius: var(--border-radius-10);
  outline: var(--border-width-05) solid var(--primary-focus);
  outline-offset: var(--spacing-05);
}

.ChipInput-border--error.ChipInput-border--focusRing {
  box-shadow: var(--shadow-spread) var(--alert-shadow);
}

.ChipInput-input {
  border: none;
  outline: none;
  display: flex;
  width: 100%;
  min-width: 15%;
  flex: 0px;
  box-sizing: border-box;
  font-family: var(--font-family);
  font-size: var(--font-size);
}

.ChipInput-input--small {
  height: 20px;
  margin-top: var(--spacing-05);
  margin-bottom: var(--spacing-05);
  font-size: var(--font-size-s);
  line-height: var(--font-height-s);
  font-weight: var(--font-weight-medium);
}

.ChipInput-input--regular {
  height: var(--spacing-60);
  margin-top: var(--spacing-10);
  margin-bottom: var(--spacing-10);
}

.ChipInput:hover .ChipInput-input {
  background: var(--secondary-lighter);
}

.ChipInput:focus-within .ChipInput-input {
  background: var(--white);
}

.ChipInput-icon {
  cursor: pointer;
  border-radius: var(--border-radius-full);
}

.ChipInput-icon--small {
  flex-shrink: 0;
  align-self: center;
  margin-left: var(--spacing-15);
  height: var(--spacing-30);
}

.ChipInput-icon--regular {
  height: var(--spacing-40);
  margin-left: var(--spacing-20);
  margin-top: var(--spacing-20);
}

.ChipInput-icon:hover {
  background-color: var(--secondary);
}

.ChipInput-icon:active {
  background-color: var(--secondary-dark);
}

.ChipInput-icon:focus,
.ChipInput-icon:focus-visible {
  outline: var(--border-width-05) solid var(--primary-focus);
  outline-offset: var(--spacing-05);
}

